--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: python
 python:
   - "2.7"
+sudo: false
+dist: trusty
+install: pip install numpy scipy matplotlib pandas seaborn scikit_learn requests pytest
+script: PYTHONPATH=. pytest msda/tests
